syntax = "proto3";
package balance;

import "google/protobuf/empty.proto";

message Host {
    string ip = 1;
    string port = 2;
}

message GetCandidateReply {
    repeated Host host = 1;
}

enum BalanceRequestType {
    GetCandidates = 0;
    Ping = 1;
}

message BalanceRequest {
    uint32 id = 1;
    BalanceRequestType type = 2;
}

message BalanceResponse {
    uint32 id = 1;
    oneof reply {
        GetCandidateReply candidate = 2;
        google.protobuf.Empty ping = 3;
    }
}
